# lets-subscribe

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: confirm_subscription.rs  lib.rs  subscribe.rs  unsubscribe.rs  welcome_email_templ.rs
lets-subscribe-template.fifthtry.site/: FASTN.ftd  index.ftd
lets-subscribe-template.fifthtry.site/.fastn/: config.json
lets-subscribe-template.fifthtry.site/.packages/: lets-subscribe.fifthtry.site
lets-subscribe.fifthtry-community.com/: FASTN.ftd  index.ftd
lets-subscribe.fifthtry-community.com/.fastn/: config.json
lets-subscribe.fifthtry.site/: FASTN.ftd  config.ftd  index.ftd
lets-subscribe.fifthtry.site/.fastn/: config.json
lets-subscribe.fifthtry.site/mails/: double-opt-in.ftd  index.ftd  welcome.ftd
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
src/: confirm_email_templ.rs  confirm_subscription.rs  email_templ.rs  is_subscribed.rs  lib.rs  set_tracker.rs  subscribe.rs  t.rs  unsubscribe.rs  welcome_email_templ.rs
