[package]
name = "backend"
version = "0.1.0"
edition.workspace = true


[lib]
crate-type = ["cdylib"]


[dependencies]
cookie.workspace = true
ft-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
diesel.workspace = true
validator.workspace = true
smallvec.workspace = true
